force-app/main/default/objects/ETMStage_Monitoring__c/ETMStage_Monitoring__c.object-meta.xml
<CustomObject>
    <label>ETM Stage Monitoring</label>
    <nameField>
        <label>ETM Stage Monitoring Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ETM Stage Monitorings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>