force-app/main/default/objects/ETMStage_Monitoring__c/fields/Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>Initiated_By__c</fullName>
    <description>SAL26-323 Created for the purpose to identify whether ETM Stage Monitoring records by created due to Admin Queue approvals or manually by users.</description>
    <label>Initiated By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin Queue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>