force-app/main/default/objects/ETMStage_Monitoring__c/fields/Stage_History__c.field-meta.xml
<CustomField>
    <fullName>Stage_History__c</fullName>
    <label>Stage History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>