force-app/main/default/objects/ETMStage_Monitoring__c/fields/Total_Territory2_Record__c.field-meta.xml
<CustomField>
    <fullName>Total_Territory2_Record__c</fullName>
    <description>Counts total number of account staging records for current stage monitoring</description>
    <label>Total Territory2 Records</label>
    <summaryForeignKey>Territory_Stage__c.JobId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>