force-app/main/default/objects/ETMStage_Monitoring__c/fields/Total_Unprocessed_UTA_Records__c.field-meta.xml
<CustomField>
    <fullName>Total_Unprocessed_UTA_Records__c</fullName>
    <label>Total Unprocessed UTA Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>