force-app/main/default/objects/ETMStage_Monitoring__c/fields/Total_UserTerritoryAssociation_Record__c.field-meta.xml
<CustomField>
    <fullName>Total_UserTerritoryAssociation_Record__c</fullName>
    <description>Counts total number of UTA staging records for current stage monitoring</description>
    <label>Total UserTerritoryAssociation Records</label>
    <summaryForeignKey>UserTerritoryAssociation_Stage__c.JobId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>