force-app/main/default/objects/ETMStage_Monitoring__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Stage_History__c</columns>
    <columns>Comments__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Total_Account_Record__c</columns>
    <columns>Total_Unprocessed_Account_Records__c</columns>
    <columns>Total_UserTerritoryAssociation_Record__c</columns>
    <columns>Total_Unprocessed_UTA_Records__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>