force-app/main/default/objects/ETMStage_Monitoring__c/listViews/Brian_s_ETM_list_view.listView-meta.xml
<ListView>
    <fullName>Brian_s_ETM_list_view</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Total_Account_Record__c</columns>
    <filterScope>Everything</filterScope>
    <label>Brian&apos;s ETM list view</label>
</ListView>