force-app/main/default/objects/ETMStage_Monitoring__c/listViews/My_Change_Requests.listView-meta.xml
<ListView>
    <fullName>My_Change_Requests</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Comments__c</columns>
    <columns>Stage_History__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Account_Record__c</columns>
    <columns>Total_Unprocessed_Account_Records__c</columns>
    <columns>Total_Territory2_Record__c</columns>
    <columns>Total_Unprocessed_Territory2_Records__c</columns>
    <columns>Total_UserTerritoryAssociation_Record__c</columns>
    <columns>Total_Unprocessed_UTA_Records__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Change Requests</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>